fix search collapse bug

--- a/browser/style/less.css
+++ b/browser/style/less.css
@@ -6805,13 +6805,6 @@ table {
   color: #aaa;
   background-color: #333;
 }
-.collapsing {
-  -webkit-transition: height 0.001s;
-  -moz-transition: height 0.001s;
-  -ms-transition: height 0.001s;
-  -o-transition: height 0.001s;
-  transition: height 0.001s;
-}
 .file-select-control {
   outline: none;
 }
