--- a/less/collapsible-select-control.less
+++ b/less/collapsible-select-control.less
@@ -61,11 +61,3 @@
 	color: #aaa;
 	background-color: #333;
 }
-
-.collapsing {
-	-webkit-transition: height 0.001s;
-	-moz-transition: height 0.001s;
-	-ms-transition: height 0.001s;
-	-o-transition: height 0.001s;
-	transition: height 0.001s;
-}
